Fix details on homepage + increase contrast on dark mode

--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -8,6 +8,10 @@
   transition-timing-function: ease-in;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   margin: 0;
   overflow-x: hidden;
@@ -142,14 +146,15 @@ nav a:last-child {
 #protectpassword {
   max-width: 400px;
 }
-#begin {
+.begin {
   height: 45px;
   width: 160px;
   border-radius: 3px;
   background-color: #007eb4;
-  border: solid #007eb4;
+  border: 1px solid #007eb4;
   color: white;
   border-radius: 5px;
+  cursor: pointer;
 }
 #bloc1 {
   margin-top: 300px;
